--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 MIX_HOST="${APP_URL}"
 MIX_API_KEY=db_interview_ankit
 
-MIX_GOOGLE_CLIENT_ID=
-MIX_GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=
+MIX_GOOGLE_CLIENT_ID=230587351037-n34fiq2cj27908mju8uosnm9fvmh4jl7.apps.googleusercontent.com
+MIX_GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost/qa-touch/login/google/callback
